// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#useTime should respect prop updates 1`] = `
Object {
  "current": 0,
  "error": undefined,
}
`;

exports[`#useTime should respect prop updates 2`] = `
Object {
  "current": 1,
  "error": undefined,
}
`;

exports[`#useTime should respect prop updates 3`] = `
Object {
  "current": 2,
  "error": undefined,
}
`;

exports[`#useTime should respect prop updates 4`] = `
Object {
  "current": 0,
  "error": undefined,
}
`;

exports[`#useTime should respect prop updates 5`] = `
Object {
  "current": 300,
  "error": undefined,
}
`;
